--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -4,6 +4,12 @@
             <mat-icon>menu</mat-icon>
         </button>
         <h1 class="example-app-name">{{infos.entitledMonument}}</h1>
+        <button mat-icon-button>
+            <mat-icon>login</mat-icon>Login in
+        </button>
+        <button mat-icon-button>
+            <mat-icon>logout</mat-icon>Log out
+        </button>
     </mat-toolbar>
 
     <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
